--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import-normalize;
-
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Darker+Grotesque:wght@300;500;700;800&family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap");
 
 :root {
@@ -13,6 +11,7 @@
 }
 
 body {
+  font-size: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
