--- a/src/components/contact-form/contact-form.css
+++ b/src/components/contact-form/contact-form.css
@@ -12,12 +12,12 @@
 
 .input-label {
   font-family: var(--copy);
-  font-size: 1.2rem;
+  font-size: 1.4em;
   font-weight: 400;
   color: var(--white);
   margin-bottom: 0.5rem;
   align-self: flex-start;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .input-field {
@@ -58,24 +58,28 @@ textarea:focus {
 }
 
 .contact-button {
-  display: flex;
   border-radius: 5px;
-  justify-content: center;
-  align-items: center;
   border: 2px solid var(--teal);
   font-family: var(--copy);
   text-decoration: none;
   text-transform: uppercase;
-  width: 125px;
-  height: 30px;
+  min-width: 125px;
   background-color: var(--opaque);
   color: var(--teal);
   transition: 0.6s;
-  margin-top: 0px;
-  margin-bottom: 2rem;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: auto;
-  font-size: 1rem;
-  padding-bottom: 5px;
+}
+
+.contact-button-text {
+  display: flex;
+  height: 1.3em;
+  font-size: 1.3em;
+  margin: 0px;
+  padding-bottom: 3px;
 }
 
 .contact-button:hover {
