--- a/src/components/my-work/my-work.module.css
+++ b/src/components/my-work/my-work.module.css
@@ -13,9 +13,8 @@
 
 .card {
   display: flex;
-  height: auto;
   max-width: 1200px;
-  height: 450px;
+  min-height: 450px;
   background-color: var(--black);
 }
 
