--- a/src/components/my-work/my-work.module.css
+++ b/src/components/my-work/my-work.module.css
@@ -115,8 +115,8 @@
 
 .cardImage {
   align-self: center;
-  height: 285px;
-  width: 500px;
+  /* height: 285px; */
+  width: 100%;
   object-fit: contain;
   border-radius: 5px;
 }
