--- a/src/components/contact-form/contact-form.module.css
+++ b/src/components/contact-form/contact-form.module.css
@@ -21,11 +21,11 @@
 }
 
 .field {
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
   font-family: var(--copy);
-  font-size: large;
+  font-size: 1.2em;
   padding-top: 3px;
-  padding-bottom: 5px;
+  padding-bottom: 6px;
   padding-left: 5px;
 }
 
@@ -35,8 +35,15 @@
 }
 
 .textarea {
+  margin-bottom: 20px;
+  font-family: var(--copy);
+  font-size: 1.2em;
+  padding-top: 3px;
+  padding-bottom: 6px;
+  padding-left: 5px;
   border-radius: 5px;
   border: 2px solid var(--black);
+  height: 125px;
 }
 
 .input:focus {
