--- a/src/components/my-work/my-work.module.css
+++ b/src/components/my-work/my-work.module.css
@@ -66,8 +66,8 @@
 
 .tools {
   font-family: var(--copy);
-  font-size: large;
-  font-style: italic;
+  font-size: 1.3em;
+  font-weight: 400;
   text-align: left;
   margin: 0 0 20px 0;
   color: var(--white);
@@ -115,7 +115,6 @@
 
 .cardImage {
   align-self: center;
-  /* height: 285px; */
   width: 100%;
   object-fit: contain;
   border-radius: 5px;
